--- a/index.html
+++ b/index.html
@@ -9,5 +9,8 @@
     <script src="js/resources.js"></script>
     <script src="js/app.js"></script>
     <script src="js/engine.js"></script>
+    <div>
+        <p id="score">0</p>
+    </div>
 </body>
 </html>
